Api logic created.
