# api/swagger/swagger.yaml
@@ -24,10 +24,12 @@ tags:
   description: Authentication operations
 - name: 'Card'
   description: Operations about Simple Users cards
-- name: 'Transaction'
-  description: Operations about Simple Users transactions
 - name: 'Tickets'
   description: Operations about Simple tickets
+- name: 'Event'
+  description: Operations about Simple events
+- name: 'Transaction'
+  description: Operations about Simple Users transactions
 securityDefinitions:
   ApiKeyAuth:
     type: apiKey
@@ -133,6 +135,14 @@ paths:
             default: []
             items:
               $ref: "#/definitions/CardResponse"
+        404:
+          description: No cards found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
     post:
       description: Create user card
       operationId: createCard
@@ -153,7 +163,7 @@ paths:
           schema:
             $ref: "#/definitions/CreateUserResponse"
         409:
-          description: Card already exists!
+          description: Card already exists
           schema:
             $ref: "#/definitions/ErrorResponse"
         default:
@@ -180,7 +190,11 @@ paths:
           schema:
             $ref: '#/definitions/CardResponse'
         404:
-          description: Card not found!
+          description: Card not found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
     delete:
@@ -202,7 +216,11 @@ paths:
           schema:
             $ref: '#/definitions/SuccessResponse'
         404:
-          description: Card not found!
+          description: Card not found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
     put:
@@ -229,12 +247,20 @@ paths:
           description: Success
           schema:
             $ref: '#/definitions/CardResponse'
-        404:
-          description: Card not found!
+        403:
+          description: Incorrect card password
           schema:
             $ref: "#/definitions/ErrorResponse"
-        403:
-          description: Incorrect card password!
+        404:
+          description: Card not found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        409:
+          description: Card already exists
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
   /transaction:
@@ -244,6 +270,8 @@ paths:
       operationId: getTransactions
       tags:
       - "Transaction"
+      security:
+      - ApiKeyAuth: []
       responses:
         200:
           description: Success
@@ -251,8 +279,8 @@ paths:
             type: array
             items:
               $ref: "#/definitions/Transaction"
-        400:
-          description: Error
+        404:
+          description: No transactions found
           schema:
             $ref: "#/definitions/ErrorResponse"
         default:
@@ -266,6 +294,8 @@ paths:
       operationId: getTransaction
       tags:
       - "Transaction"
+      security:
+      - ApiKeyAuth: []
       parameters:
       - name: id
         in: path
@@ -275,24 +305,100 @@ paths:
         200:
           description: Success
           schema:
-            type: array
-            items:
-              $ref: "#/definitions/Transaction"
-        400:
-          description: Error
+            $ref: "#/definitions/Transaction"
+        404:
+          description: Transaction not found
           schema:
             $ref: "#/definitions/ErrorResponse"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /ticket:
-    x-swagger-router-controller: ticket
+  /event:
+    x-swagger-router-controller: event
     get:
       description: Get available tickets
-      operationId: getAvailableTickets
+      operationId: getAvailableEvents
+      tags:
+      - "Event"
+      security:
+      - ApiKeyAuth: []
+      parameters:
+        - name: search
+          in: query
+          type: string
+          description: Search parameter
+        - name: from
+          in: query
+          type: string
+          format: date-time
+          description: Date from
+        - name: to
+          in: query
+          type: string
+          format: date-time
+          description: Date to
+      responses:
+        200:
+          description: Success
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Event"
+        404:
+          description: No event found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /event/{id}:
+    x-swagger-router-controller: event
+    get:
+      description: Get available tickets
+      operationId: getEventDetails
+      tags:
+      - "Event"
+      security:
+      - ApiKeyAuth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        type: string
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/Event"
+        404:
+          description: Event not found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /ticket/{eventTciketId}/order:
+    x-swagger-router-controller: ticket
+    post:
+      description: Order ticket
+      operationId: orderTicket
       tags:
       - "Tickets"
+      security:
+      - ApiKeyAuth: []
+      parameters:
+      - name: eventTciketId
+        in: path
+        required: true
+        type: string
+        description: Event ticket id, which you want to order
+      - name: order
+        in: body
+        schema:
+          $ref: '#/definitions/OrderTicket'
       responses:
         200:
           description: Success
@@ -304,58 +410,8 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-  /ticket/{id}:
-    x-swagger-router-controller: ticket
-    get:
-      description: Get available tickets
-      operationId: getAvailableTicketDetails
-      tags:
-      - "Tickets"
-      parameters:
-      - name: id
-        in: path
-        required: true
-        type: string
-      responses:
-        200:
-          description: Success
-          schema:
-            $ref: "#/definitions/Ticket"
-        400:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-  /ticket/{id}/order:
-    x-swagger-router-controller: ticket
-    post:
-      description: Order ticket
-      operationId: orderTicket
-      tags:
-      - "Tickets"
-      parameters:
-      - name: id
-        in: path
-        required: true
-        type: string
-      - name: order
-        in: body
-        schema:
-          $ref: '#/definitions/OrderTicket'
-      responses:
-        200:
-          description: Success
-          schema:
-            $ref: "#/definitions/Ticket"
-        400:
-          description: Error
+        403:
+          description: Incorrect password
           schema:
             $ref: "#/definitions/ErrorResponse"
         default:
@@ -369,6 +425,8 @@ paths:
       operationId: getUserTickets
       tags:
       - "Tickets"
+      security:
+      - ApiKeyAuth: []
       responses:
         200:
           description: Success
@@ -376,23 +434,25 @@ paths:
             type: array
             items:
               $ref: '#/definitions/OrderedTicket'
-        400:
-          description: Error
+        404:
+          description: No tickets found
           schema:
             $ref: "#/definitions/ErrorResponse"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /user-ticket/{orderId}:
+  /user-ticket/getByEvent/{eventId}:
     x-swagger-router-controller: ticket
     get:
-      description: Get user ordered ticket by orderId
-      operationId: getUserTicket
+      description: Get user ordered ticket for an event by eventId
+      operationId: getUserTicketsByEventId
       tags:
       - "Tickets"
+      security:
+      - ApiKeyAuth: []
       parameters:
-      - name: orderId
+      - name: eventId
         in: path
         required: true
         type: string
@@ -403,6 +463,10 @@ paths:
             $ref: '#/definitions/OrderedTicket'
         400:
           description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        404:
+          description: No tickets for the event
           schema:
             $ref: "#/definitions/ErrorResponse"
         default:
@@ -471,6 +535,7 @@ definitions:
       password:
         type: string
         example: 'cardPassword'
+        minLength: 6
       limit:
         type: number
         example: 5000
@@ -479,15 +544,6 @@ definitions:
         description: 'Password is required if the amount of payment is greater then the given number (0 - means always required)'
       bank_card:
         $ref: '#/definitions/BankCard'
-  UpdateCard:
-    allOf:
-      - $ref: '#/definitions/Card'
-      - type: object
-        properties:
-            newPassword:
-              type: string
-              example: 'newCardPassword'
-              description: 'Provide only if you want to update the password'
   BankCard:
     required:
     - holder_name
@@ -503,13 +559,19 @@ definitions:
       number:
         type: string
         example: '4012888888881881'
-  CardsResponse:
-    type: object
-    required:
-    - cards
-    properties:
-      cards:
-        $ref: "#/definitions/CardResponse"
+      balance:
+        type: number
+        example: 100000
+  UpdateCard:
+    allOf:
+      - $ref: '#/definitions/Card'
+      - type: object
+        properties:
+            newPassword:
+              type: string
+              example: 'newCardPassword'
+              minLength: 6
+              description: 'Provide only, if you want to update the password'
   CardResponse:
     required:
     - id
@@ -541,6 +603,9 @@ definitions:
       number:
         type: string
         example: '4012888888881881'
+      balance:
+        type: number
+        example: 100000
   Transaction:
     required:
     - id
@@ -556,35 +621,66 @@ definitions:
       card_id:
         type: string
         example: '123'
+      date:
+        type: string
+        format: date-time
+      orderItem:
+        items:
+          type: object
+          required:
+            - id
+            - type
+          properties:
+            id:
+              type: string
+              example: '1'
+            type:
+              type: string
+              enum:
+                - eventTicket
+              example: 'eventTicket'
   Ticket:
+    required:
+    - id
+    - date
+    properties:
+      id:
+        type: string
+        example: '123'
+      description:
+        type: string
+        example: 'Ticket for Venom Movie'
+      date:
+        type: string
+        format: date-time
+  Event:
     required:
     - id
     - name
     - amount
-    - available
     properties:
       id:
         type: string
         example: '123'
       name:
         type: string
-        example: 'Ticket for Venom Movie'
+        example: 'Watch Hulk in the cinema'
+      description:
+        type: string
+        example: 'Event description'
       amount:
         type: number
         example: 1000
-      available:
-        type: number
-        example: 100
+      tickets:
+        type: array
+        items:
+          $ref: '#/definitions/Ticket'
   OrderTicket:
     required:
-    - ticket_id
     - amount
     - card_id
     - card_password
     properties:
-      ticket_id:
-        type: string
-        example: '123'
       amount:
         type: number
         example: 5
@@ -599,20 +695,25 @@ definitions:
         description: 'Password for the card. (Required only when the tickets price is above the card limit)'
   OrderedTicket:
     required:
-    - order_id
-    - ticket_id
+    - event_id
     - amount
     properties:
-      order_id:
-        type: string
-        example: '123'
-      ticket_id:
+      event_id:
         type: string
         example: '123'
       amount:
         type: number
         example: 5
         description: 'Amount of tickets bought'
+      tickets:
+        type: array
+        items:
+          allOf:
+            - $ref: '#/definitions/Ticket'
+            - type: object
+              properties:
+                available:
+                  type: integer
   ErrorResponse:
     required:
     - message
